--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -1282,5 +1282,33 @@
   "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
   "Caption": "Caption",
   "Open": "Open",
-  "Error loading data": "Error loading data"
+  "Error loading data": "Error loading data",
+  "Loading diagram...": "Loading diagram...",
+  "Enter Edit Mode": "Enter Edit Mode",
+  "Enter View Mode": "Enter View Mode",
+  "Exit Fullscreen": "Exit Fullscreen",
+  "Enter Fullscreen": "Enter Fullscreen",
+  "Connecting to collaboration...": "Connecting to collaboration...",
+  "Reconnecting...": "Reconnecting...",
+  "Connection lost. Reconnecting...": "Connection lost. Reconnecting...",
+  "Configure editor settings and preferences for the workspace.": "Configure editor settings and preferences for the workspace.",
+  "Excalidraw Libraries": "Excalidraw Libraries",
+  "Configure which Excalidraw libraries are available in the drawing editor. Add URLs to remote .excalidrawlib files.": "Configure which Excalidraw libraries are available in the drawing editor. Add URLs to remote .excalidrawlib files.",
+  "URLs must point to valid .excalidrawlib files.": "URLs must point to valid .excalidrawlib files.",
+  "Mermaid Icon Packs": "Mermaid Icon Packs",
+  "Configure which icon packs are available in Mermaid diagrams. Add icon packs with a name and URL to iconify JSON files.": "Configure which icon packs are available in Mermaid diagrams. Add icon packs with a name and URL to iconify JSON files.",
+  "Pack name (e.g. logos)": "Pack name (e.g. logos)",
+  "You can use iconify JSON files from https://unpkg.com/@iconify-json/. Example: https://unpkg.com/@iconify-json/logos@1/icons.json": "You can use iconify JSON files from https://unpkg.com/@iconify-json/. Example: https://unpkg.com/@iconify-json/logos@1/icons.json",
+  "Please enter a valid URL ending with .excalidrawlib": "Please enter a valid URL ending with .excalidrawlib",
+  "This library is already added": "This library is already added",
+  "Library added": "Library added",
+  "Failed to add library": "Failed to add library",
+  "Library removed": "Library removed",
+  "Failed to remove library": "Failed to remove library",
+  "Please enter a valid URL ending with .json": "Please enter a valid URL ending with .json",
+  "An icon pack with this name already exists": "An icon pack with this name already exists",
+  "Icon pack added": "Icon pack added",
+  "Failed to add icon pack": "Failed to add icon pack",
+  "Icon pack removed": "Icon pack removed",
+  "Failed to remove icon pack": "Failed to remove icon pack"
 }
