fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -322,6 +322,8 @@
   "Unable to download image": "Unable to download image",
   "Lightbox": "Visionneuse",
   "View, navigate, or download images in the document": "Afficher, naviguer ou télécharger des images dans le document",
+  "Zoom in": "Zoom in",
+  "Zoom out": "Zoom out",
   "Close": "Fermer",
   "Previous": "Précédent",
   "Next": "Suivant",
