fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -322,6 +322,8 @@
   "Unable to download image": "Unable to download image",
   "Lightbox": "라이트박스",
   "View, navigate, or download images in the document": "문서에서 이미지 보기, 탐색 또는 다운로드",
+  "Zoom in": "Zoom in",
+  "Zoom out": "Zoom out",
   "Close": "닫기",
   "Previous": "이전",
   "Next": "다음",
