fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -322,6 +322,8 @@
   "Unable to download image": "Unable to download image",
   "Lightbox": "LightBox",
   "View, navigate, or download images in the document": "Bilder im Dokument anzeigen, navigieren oder herunterladen",
+  "Zoom in": "Zoom in",
+  "Zoom out": "Zoom out",
   "Close": "Schließen",
   "Previous": "Zurück",
   "Next": "Nächste",
