--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -322,6 +322,8 @@
   "Unable to download image": "Unable to download image",
   "Lightbox": "Caja de luz\t",
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
+  "Zoom in": "Zoom in",
+  "Zoom out": "Zoom out",
   "Close": "Cerrar",
   "Previous": "Previous",
   "Next": "Siguiente",
