fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -322,6 +322,8 @@
   "Unable to download image": "Unable to download image",
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "Visualizza, naviga, o scarica immagini nel documento",
+  "Zoom in": "Zoom in",
+  "Zoom out": "Zoom out",
   "Close": "Chiudi",
   "Previous": "Precedente",
   "Next": "Successivo",
