--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -322,6 +322,8 @@
   "Unable to download image": "Kan afbeelding niet downloaden",
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "Bekijk, navigeer of download afbeeldingen in het document",
+  "Zoom in": "Zoom in",
+  "Zoom out": "Zoom out",
   "Close": "Sluiten",
   "Previous": "Vorige",
   "Next": "Volgende",
