fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -322,6 +322,8 @@
   "Unable to download image": "Unable to download image",
   "Lightbox": "大图模式",
   "View, navigate, or download images in the document": "浏览、查看或下载文档中的图片",
+  "Zoom in": "Zoom in",
+  "Zoom out": "Zoom out",
   "Close": "关闭",
   "Previous": "上一个",
   "Next": "下一个",
