fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -322,6 +322,8 @@
   "Unable to download image": "Unable to download image",
   "Lightbox": "Lysboks",
   "View, navigate, or download images in the document": "Vis, naviger, eller last ned bilder i dokumentet",
+  "Zoom in": "Zoom in",
+  "Zoom out": "Zoom out",
   "Close": "Lukk",
   "Previous": "Forrige",
   "Next": "Neste",
