fix excalidraw export

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -419,7 +419,6 @@
   "Archived collections": "Archived collections",
   "New doc": "New doc",
   "Empty": "Empty",
-  "No collections": "No collections",
   "Collapse": "Collapse",
   "Expand": "Expand",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Document not supported – try Markdown, Plain text, HTML, or Word",
@@ -485,6 +484,14 @@
   "Mention": "Mention",
   "Embed": "Embed",
   "More options": "More options",
+  "Loading diagram...": "Loading diagram...",
+  "Enter Edit Mode": "Enter Edit Mode",
+  "Enter View Mode": "Enter View Mode",
+  "Exit Fullscreen": "Exit Fullscreen",
+  "Enter Fullscreen": "Enter Fullscreen",
+  "Connecting to collaboration...": "Connecting to collaboration...",
+  "Reconnecting...": "Reconnecting...",
+  "Connection lost. Reconnecting...": "Connection lost. Reconnecting...",
   "Rename": "Rename",
   "Insert after": "Insert after",
   "Insert before": "Insert before",
@@ -1069,6 +1076,26 @@
   "This is the screen that workspace members will first see when they sign in.": "This is the screen that workspace members will first see when they sign in.",
   "Danger": "Danger",
   "You can delete this entire workspace including collections, documents, and users.": "You can delete this entire workspace including collections, documents, and users.",
+  "Please enter a valid URL ending with .excalidrawlib": "Please enter a valid URL ending with .excalidrawlib",
+  "This library is already added": "This library is already added",
+  "Library added": "Library added",
+  "Failed to add library": "Failed to add library",
+  "Library removed": "Library removed",
+  "Failed to remove library": "Failed to remove library",
+  "Please enter a valid URL starting with http and ending with .json": "Please enter a valid URL starting with http and ending with .json",
+  "An icon pack with this name already exists": "An icon pack with this name already exists",
+  "Icon pack added": "Icon pack added",
+  "Failed to add icon pack": "Failed to add icon pack",
+  "Icon pack removed": "Icon pack removed",
+  "Failed to remove icon pack": "Failed to remove icon pack",
+  "Configure editor settings and preferences for the workspace.": "Configure editor settings and preferences for the workspace.",
+  "Excalidraw Libraries": "Excalidraw Libraries",
+  "Configure which Excalidraw libraries are available in the drawing editor. Add URLs to remote .excalidrawlib files.": "Configure which Excalidraw libraries are available in the drawing editor. Add URLs to remote .excalidrawlib files.",
+  "URLs must point to valid .excalidrawlib files.": "URLs must point to valid .excalidrawlib files.",
+  "Mermaid Icon Packs": "Mermaid Icon Packs",
+  "Configure which icon packs are available in Mermaid diagrams. Add icon packs with a name and URL to iconify JSON files.": "Configure which icon packs are available in Mermaid diagrams. Add icon packs with a name and URL to iconify JSON files.",
+  "Pack name (e.g. logos)": "Pack name (e.g. logos)",
+  "You can use iconify JSON files from <2>https://unpkg.com/@iconify-json/</2>. Example: <5>https://unpkg.com/@iconify-json/logos@1/icons.json</5>": "You can use iconify JSON files from <2>https://unpkg.com/@iconify-json/</2>. Example: <5>https://unpkg.com/@iconify-json/logos@1/icons.json</5>",
   "Export data": "Export data",
   "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.",
   "Recent exports": "Recent exports",
@@ -1282,33 +1309,5 @@
   "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
   "Caption": "Caption",
   "Open": "Open",
-  "Error loading data": "Error loading data",
-  "Loading diagram...": "Loading diagram...",
-  "Enter Edit Mode": "Enter Edit Mode",
-  "Enter View Mode": "Enter View Mode",
-  "Exit Fullscreen": "Exit Fullscreen",
-  "Enter Fullscreen": "Enter Fullscreen",
-  "Connecting to collaboration...": "Connecting to collaboration...",
-  "Reconnecting...": "Reconnecting...",
-  "Connection lost. Reconnecting...": "Connection lost. Reconnecting...",
-  "Configure editor settings and preferences for the workspace.": "Configure editor settings and preferences for the workspace.",
-  "Excalidraw Libraries": "Excalidraw Libraries",
-  "Configure which Excalidraw libraries are available in the drawing editor. Add URLs to remote .excalidrawlib files.": "Configure which Excalidraw libraries are available in the drawing editor. Add URLs to remote .excalidrawlib files.",
-  "URLs must point to valid .excalidrawlib files.": "URLs must point to valid .excalidrawlib files.",
-  "Mermaid Icon Packs": "Mermaid Icon Packs",
-  "Configure which icon packs are available in Mermaid diagrams. Add icon packs with a name and URL to iconify JSON files.": "Configure which icon packs are available in Mermaid diagrams. Add icon packs with a name and URL to iconify JSON files.",
-  "Pack name (e.g. logos)": "Pack name (e.g. logos)",
-  "You can use iconify JSON files from https://unpkg.com/@iconify-json/. Example: https://unpkg.com/@iconify-json/logos@1/icons.json": "You can use iconify JSON files from https://unpkg.com/@iconify-json/. Example: https://unpkg.com/@iconify-json/logos@1/icons.json",
-  "Please enter a valid URL ending with .excalidrawlib": "Please enter a valid URL ending with .excalidrawlib",
-  "This library is already added": "This library is already added",
-  "Library added": "Library added",
-  "Failed to add library": "Failed to add library",
-  "Library removed": "Library removed",
-  "Failed to remove library": "Failed to remove library",
-  "Please enter a valid URL ending with .json": "Please enter a valid URL ending with .json",
-  "An icon pack with this name already exists": "An icon pack with this name already exists",
-  "Icon pack added": "Icon pack added",
-  "Failed to add icon pack": "Failed to add icon pack",
-  "Icon pack removed": "Icon pack removed",
-  "Failed to remove icon pack": "Failed to remove icon pack"
+  "Error loading data": "Error loading data"
 }
