--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -24,7 +24,7 @@
   "Subscribed to document notifications": "Geabonneerd op documentmeldingen",
   "Unsubscribe": "Afmelden",
   "Unsubscribed from document notifications": "Afgemeld van documentmeldingen",
-  "Archive": "Archiveren",
+  "Archive": "Archief",
   "Archive collection": "Zoek in collecties",
   "Collection archived": "Collectie aangemaakt",
   "Archiving": "Achiveren",
@@ -323,7 +323,7 @@
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "Bekijk, navigeer of download afbeeldingen in het document",
   "Zoom in": "Zoom in",
-  "Zoom out": "Zoom out",
+  "Zoom out": "Uitzoomen",
   "Close": "Sluiten",
   "Previous": "Vorige",
   "Next": "Volgende",
