fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -688,8 +688,11 @@
   "You may have lost access to this document, try reloading": "Vous avez peut-être perdu l'accès à ce document, essayez de recharger",
   "Too many users connected to document": "Trop d'utilisateurs connectés au document",
   "Your edits will sync once other users leave the document": "Vos modifications seront synchronisées une fois que les autres utilisateurs quitteront le document",
+  "New version available": "New version available",
+  "Please reload the page to update to the latest version": "Please reload the page to update to the latest version",
   "Server connection lost": "Connexion au serveur perdue",
   "Edits you make will sync once you’re online": "Les modifications que vous effectuez seront synchronisées lorsque vous serez en ligne",
+  "Offline": "Hors-ligne",
   "Document restored": "Document restauré",
   "Images are still uploading.\nAre you sure you want to discard them?": "Des images sont toujours en cours de téléchargement.\nÊtes-vous sûr de vouloir les supprimer ?",
   "{{ count }} comment": "{{ count }} commentaire",
@@ -765,7 +768,6 @@
   "Please request access from the document owner.": "Veuillez demander l'accès au propriétaire du document.",
   "Not found": "Non trouvé",
   "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.": "La page que vous cherchez est introuvable. Elle a peut-être été supprimée ou le lien est incorrect.",
-  "Offline": "Hors-ligne",
   "We were unable to load the document while offline.": "Impossible de charger le document en mode hors-ligne.",
   "Your account has been suspended": "Votre compte a été suspendu",
   "Warning Sign": "Signe d'avertissement",
