--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -688,8 +688,11 @@
   "You may have lost access to this document, try reloading": "Lehet, hogy nincs hozzáférése a dokumentumhoz, próbálja meg újra betölteni",
   "Too many users connected to document": "Túl sok felhasználó kapcsolódik a dokumentumhoz",
   "Your edits will sync once other users leave the document": "A módosításai szinkronizálódnak, amikor a többi felhasználó elhagyja a dokumentumot",
+  "New version available": "New version available",
+  "Please reload the page to update to the latest version": "Please reload the page to update to the latest version",
   "Server connection lost": "A szerverrel a kapcsolat megszakadt",
   "Edits you make will sync once you’re online": "Az elvégzett módosítások szinkronizálódnak, amint online lesz",
+  "Offline": "Offline",
   "Document restored": "Dokumentum visszaállítva",
   "Images are still uploading.\nAre you sure you want to discard them?": "Images are still uploading.\nAre you sure you want to discard them?",
   "{{ count }} comment": "{{ count }} tag",
@@ -765,7 +768,6 @@
   "Please request access from the document owner.": "Please request access from the document owner.",
   "Not found": "Not found",
   "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.": "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.",
-  "Offline": "Offline",
   "We were unable to load the document while offline.": "We were unable to load the document while offline.",
   "Your account has been suspended": "A fiókja felfüggesztésre került",
   "Warning Sign": "Warning Sign",
