fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -688,8 +688,11 @@
   "You may have lost access to this document, try reloading": "Być może straciłeś dostęp do tego dokumentu, spróbuj przeładować ponownie",
   "Too many users connected to document": "Zbyt wielu użytkowników podłączonych do dokumentu",
   "Your edits will sync once other users leave the document": "Twoje zmiany będą synchronizowane po opuszczeniu dokumentu przez innych użytkowników",
+  "New version available": "New version available",
+  "Please reload the page to update to the latest version": "Please reload the page to update to the latest version",
   "Server connection lost": "Utracono połączenie z serwerem",
   "Edits you make will sync once you’re online": "Wprowadzone przez Ciebie zmiany zostaną zsynchronizowane, gdy będziesz online",
+  "Offline": "Tryb offline",
   "Document restored": "Dokument przywrócony",
   "Images are still uploading.\nAre you sure you want to discard them?": "Obrazy są nadal przesyłane.\nCzy na pewno chcesz je odrzucić?",
   "{{ count }} comment": "{{ count }} komentarz",
@@ -765,7 +768,6 @@
   "Please request access from the document owner.": "Poproś właściciela dokumentu o dostęp.",
   "Not found": "Nie znaleziono",
   "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.": "Nie można znaleźć strony, której szukasz. Mogła zostać usunięta lub link jest nieprawidłowy.",
-  "Offline": "Tryb offline",
   "We were unable to load the document while offline.": "Nie mogliśmy załadować dokumentu podczas trybu offline.",
   "Your account has been suspended": "Twoje konto zostało zawieszone",
   "Warning Sign": "Znak ostrzegawczy",
