--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -688,8 +688,11 @@
   "You may have lost access to this document, try reloading": "Puede que hayas perdido acceso a este documento, intenta recargar la página",
   "Too many users connected to document": "Demasiados usuarios conectados al documento",
   "Your edits will sync once other users leave the document": "Tus ediciones se sincronizarán una vez los demás usuarios salgan del documento",
+  "New version available": "New version available",
+  "Please reload the page to update to the latest version": "Please reload the page to update to the latest version",
   "Server connection lost": "Conexión al servidor perdida",
   "Edits you make will sync once you’re online": "Las ediciones que realices se sincronizarán una vez que estés en línea",
+  "Offline": "Sin conexión",
   "Document restored": "Documento restaurado",
   "Images are still uploading.\nAre you sure you want to discard them?": "Las imágenes aún se están cargando.\n¿Estás seguro de que quieres descartarlas?",
   "{{ count }} comment": "{{ count }} comentario",
@@ -765,7 +768,6 @@
   "Please request access from the document owner.": "Solicita acceso al propietario del documento.",
   "Not found": "No encontrado",
   "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.": "No se puede encontrar la página que estás buscando. Es posible que haya sido eliminada o que el enlace sea incorrecto.",
-  "Offline": "Sin conexión",
   "We were unable to load the document while offline.": "No pudimos cargar el documento sin conexión.",
   "Your account has been suspended": "Tu cuenta ha sido suspendida",
   "Warning Sign": "Señal de Advertencia",
