fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -688,8 +688,11 @@
   "You may have lost access to this document, try reloading": "Možná jste ztratili přístup k tomuto dokumentu, zkuste jej znovu načíst",
   "Too many users connected to document": "Příliš mnoho uživatelů připojených k dokumentu",
   "Your edits will sync once other users leave the document": "Vaše úpravy budou synchronizovány, jakmile ostatní uživatelé opustí dokument",
+  "New version available": "New version available",
+  "Please reload the page to update to the latest version": "Please reload the page to update to the latest version",
   "Server connection lost": "Připojení k serveru bylo ztraceno",
   "Edits you make will sync once you’re online": "Úpravy, které provedete, se synchronizují, jakmile budete online",
+  "Offline": "Offline",
   "Document restored": "Dokument obnoven",
   "Images are still uploading.\nAre you sure you want to discard them?": "Obrázky se stále nahrávají.\nOpravdu je chcete zahodit?",
   "{{ count }} comment": "{{ count }} komentář",
@@ -765,7 +768,6 @@
   "Please request access from the document owner.": "Please request access from the document owner.",
   "Not found": "Nenalezeno",
   "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.": "Stránka, kterou hledáte, nebyla nalezena. Možná byla odstraněna nebo odkaz není správný.",
-  "Offline": "Offline",
   "We were unable to load the document while offline.": "V režimu offline se nepodařilo načíst dokument.",
   "Your account has been suspended": "Váš účet byl pozastaven",
   "Warning Sign": "Výstraha",
