fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -472,7 +472,7 @@
   "Find": "Zoek",
   "Match case": "Hoofdlettergevoelig",
   "Enable regex": "Regex inschakelen",
-  "Replace options": "Opties vervangen",
+  "Replace options": "Vervangen opties",
   "Replacement": "Vervanging",
   "Replace": "Vervang",
   "Replace all": "Vervang alle",
@@ -688,8 +688,11 @@
   "You may have lost access to this document, try reloading": "Mogelijk heb je de toegang tot dit document verloren, probeer te herladen",
   "Too many users connected to document": "Te veel gebruikers verbonden met document",
   "Your edits will sync once other users leave the document": "Je wijzigingen worden bijgewerkt zodra het document niet meer in gebruik is",
+  "New version available": "New version available",
+  "Please reload the page to update to the latest version": "Please reload the page to update to the latest version",
   "Server connection lost": "Verbinding met server verbroken",
   "Edits you make will sync once you’re online": "Wijzigingen die je maakt worden gesynchroniseerd zodra je online bent",
+  "Offline": "Offline",
   "Document restored": "Document hersteld",
   "Images are still uploading.\nAre you sure you want to discard them?": "Afbeeldingen worden nog steeds geüpload.\nWeet u zeker dat u ze wilt verwijderen?",
   "{{ count }} comment": "{{ count }} reactie",
@@ -765,7 +768,6 @@
   "Please request access from the document owner.": "Vraag toegang aan van de documenteigenaar.",
   "Not found": "Niet gevonden",
   "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.": "De pagina die u zoekt kan niet worden gevonden. Het is mogelijk verwijderd of de link is onjuist.",
-  "Offline": "Offline",
   "We were unable to load the document while offline.": "We konden het document niet laden terwijl je offline was.",
   "Your account has been suspended": "Je account is geblokkeerd",
   "Warning Sign": "Waarschuwingsteken",
