--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -688,8 +688,11 @@
   "You may have lost access to this document, try reloading": "Pode ter perdido acesso a este documento, tente recarregar",
   "Too many users connected to document": "Demasiados utilizadores ligados ao documento",
   "Your edits will sync once other users leave the document": "As alterações serão sincronizadas quando outros utilizadores saírem do documento",
+  "New version available": "New version available",
+  "Please reload the page to update to the latest version": "Please reload the page to update to the latest version",
   "Server connection lost": "Conexão ao servidor perdida",
   "Edits you make will sync once you’re online": "As alterações serão sincronizadas quando estiver online",
+  "Offline": "Offline",
   "Document restored": "Documento restaurado",
   "Images are still uploading.\nAre you sure you want to discard them?": "Imagens ainda a carregar.\nTem a certeza que as quer descartar?",
   "{{ count }} comment": "{{ count }} comentário",
@@ -765,7 +768,6 @@
   "Please request access from the document owner.": "Please request access from the document owner.",
   "Not found": "Not found",
   "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.": "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.",
-  "Offline": "Offline",
   "We were unable to load the document while offline.": "Não foi possível carregar o documento em modo offline.",
   "Your account has been suspended": "A sua conta foi suspensa",
   "Warning Sign": "Sinal de Aviso",
