--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -688,8 +688,11 @@
   "You may have lost access to this document, try reloading": "Bu belgeye erişiminizi kaybetmiş olabilirsiniz, lütfen sayfayı yenilemeyi deneyin",
   "Too many users connected to document": "Belgeye çok fazla kullanıcı bağlandı",
   "Your edits will sync once other users leave the document": "Diğer kullanıcılar belgeyi terk ettiğinde, yaptığınız değişiklikler senkronize olacaktır",
+  "New version available": "New version available",
+  "Please reload the page to update to the latest version": "Please reload the page to update to the latest version",
   "Server connection lost": "Sunucu bağlantısı kesildi",
   "Edits you make will sync once you’re online": "Yaptığınız düzenlemeler, çevrimiçi olduğunuzda senkronize edilir",
+  "Offline": "Çevrimdışı",
   "Document restored": "Belge geri yüklendi",
   "Images are still uploading.\nAre you sure you want to discard them?": "Resimler yüklenmeye devam ediyor.\nBunları atmak istediğinizden emin misiniz?",
   "{{ count }} comment": "{{ count }} yorum",
@@ -765,7 +768,6 @@
   "Please request access from the document owner.": "Please request access from the document owner.",
   "Not found": "Not found",
   "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.": "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.",
-  "Offline": "Çevrimdışı",
   "We were unable to load the document while offline.": "Çevrimdışıyken belgeyi yükleyemedik.",
   "Your account has been suspended": "Hesabınız askıya alındı",
   "Warning Sign": "Uyarı işareti",
