fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -688,8 +688,11 @@
   "You may have lost access to this document, try reloading": "Ви могли втратити доступ до цього документу, спробуйте перезавантажити сторінку",
   "Too many users connected to document": "Занадто багато користувачів підключено до документа",
   "Your edits will sync once other users leave the document": "Ваші редагування синхронізуються, як тільки інші користувачі покинуть документ",
+  "New version available": "New version available",
+  "Please reload the page to update to the latest version": "Please reload the page to update to the latest version",
   "Server connection lost": "З'єднання з сервером втрачено",
   "Edits you make will sync once you’re online": "Внесені вами зміни синхронізуються, коли ви під’єднаєтеся до мережі",
+  "Offline": "Офлайн",
   "Document restored": "Документ відновлено",
   "Images are still uploading.\nAre you sure you want to discard them?": "Зображення все ще завантажуються.\nВи дійсно бажаєте скасувати їх завантаження?",
   "{{ count }} comment": "{{count}} коментар",
@@ -765,7 +768,6 @@
   "Please request access from the document owner.": "Please request access from the document owner.",
   "Not found": "Not found",
   "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.": "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.",
-  "Offline": "Офлайн",
   "We were unable to load the document while offline.": "Нам не вдалося завантажити документ у режимі офлайн.",
   "Your account has been suspended": "Ваш обліковий запис заблоковано",
   "Warning Sign": "Попереджувальний знак",
