fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -688,8 +688,11 @@
   "You may have lost access to this document, try reloading": "You may have lost access to this document, try reloading",
   "Too many users connected to document": "Too many users connected to document",
   "Your edits will sync once other users leave the document": "Your edits will sync once other users leave the document",
+  "New version available": "New version available",
+  "Please reload the page to update to the latest version": "Please reload the page to update to the latest version",
   "Server connection lost": "اتصال سرور قطع شد",
   "Edits you make will sync once you’re online": "ویرایش هایی که انجام می دهید پس از آنلاین بودن همگام سازی می شوند",
+  "Offline": "آفلاین",
   "Document restored": "سند بازیابی شد",
   "Images are still uploading.\nAre you sure you want to discard them?": "تصاویر هنوز در حال بارگذاری هستند.\nآیا مطمئن هستید که می خواهید آنها را نادیده بگیرید؟",
   "{{ count }} comment": "{{ count }} comment",
@@ -765,7 +768,6 @@
   "Please request access from the document owner.": "Please request access from the document owner.",
   "Not found": "Not found",
   "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.": "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.",
-  "Offline": "آفلاین",
   "We were unable to load the document while offline.": "امکان بارگیری سند در حالت آفلاین وجود نداشت.",
   "Your account has been suspended": "حساب شما معلق شده است",
   "Warning Sign": "Warning Sign",
