--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -688,8 +688,11 @@
   "You may have lost access to this document, try reloading": "Du kan ha mistet tilgang til dette dokumentet, prøv å laste inn på nytt",
   "Too many users connected to document": "For mange brukere er koblet til dokumentet",
   "Your edits will sync once other users leave the document": "Redigeringene dine vil synkroniseres når andre brukere forlater dokumentet",
+  "New version available": "New version available",
+  "Please reload the page to update to the latest version": "Please reload the page to update to the latest version",
   "Server connection lost": "Tilkobling til server tapt",
   "Edits you make will sync once you’re online": "Redigeringene du gjør vil synkroniseres når du er på nett",
+  "Offline": "Frakoblet",
   "Document restored": "Dokument gjenopprettet",
   "Images are still uploading.\nAre you sure you want to discard them?": "Bilder lastes fortsatt opp.\nEr du sikker på at du vil forkaste dem?",
   "{{ count }} comment": "{{ count }} kommentar",
@@ -765,7 +768,6 @@
   "Please request access from the document owner.": "Vennligst be om tilgang fra eieren av dokumentet.",
   "Not found": "Ikke funnet",
   "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.": "Siden du leter etter finnes ikke. Den kan ha blitt slettet, eller så er lenken feil.",
-  "Offline": "Frakoblet",
   "We were unable to load the document while offline.": "Vi kunne ikke laste inn dokumentet mens vi var frakoblet.",
   "Your account has been suspended": "Din konto har blitt suspendert",
   "Warning Sign": "Advarselsskilt",
