fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -697,8 +697,8 @@
   "Images are still uploading.\nAre you sure you want to discard them?": "Images are still uploading.\nAre you sure you want to discard them?",
   "{{ count }} comment": "{{ count }} tag",
   "{{ count }} comment_plural": "{{ count }} tag",
-  "Viewed by": "Viewed by",
-  "only you": "only you",
+  "Viewed by": "Megtenkitve",
+  "only you": "csak általad",
   "person": "személy",
   "people": "személyek",
   "Document title": "Document title",
@@ -1279,7 +1279,7 @@
   "Never logged in": "Never logged in",
   "Online now": "Online now",
   "Online {{ timeAgo }}": "Online {{ timeAgo }}",
-  "Viewed just now": "Viewed just now",
+  "Viewed just now": "Éppen megtekintve",
   "You updated {{ timeAgo }}": "You updated {{ timeAgo }}",
   "{{ user }} updated {{ timeAgo }}": "{{ user }} updated {{ timeAgo }}",
   "You created {{ timeAgo }}": "Ön hozta létre {{ timeAgo }}",
