fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -319,11 +319,11 @@
   "Permission": "Berechtigung",
   "Change Language": "Sprache ändern",
   "Dismiss": "Ablehnen",
-  "Unable to download image": "Unable to download image",
+  "Unable to download image": "Das Bild kann nicht heruntergeladen werden",
   "Lightbox": "LightBox",
   "View, navigate, or download images in the document": "Bilder im Dokument anzeigen, navigieren oder herunterladen",
-  "Zoom in": "Zoom in",
-  "Zoom out": "Zoom out",
+  "Zoom in": "Vergrößern",
+  "Zoom out": "Verkleinern",
   "Close": "Schließen",
   "Previous": "Zurück",
   "Next": "Nächste",
@@ -372,8 +372,8 @@
   "Disable this setting to discourage search engines from indexing the page": "Deaktivieren Sie diese Einstellung, um Suchmaschinen davon abzuhalten, die Seite zu indizieren",
   "Show last modified": "Änderungsdatum anzeigen",
   "Display the last modified timestamp on the shared page": "Zeige das Änderungsdatum auf der geteilten Seite",
-  "Show table of contents": "Show table of contents",
-  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
+  "Show table of contents": "Inhaltsverzeichnis anzeigen",
+  "Display the table of contents on documents by default": "Inhaltsverzeichnis standardmäßig in Dokumenten anzeigen",
   "All documents in this collection will be shared on the web, including any new documents added later": "Alle Dokumente in dieser Sammlung werden im Internet geteilt. Dies schließt neue Dokumente ein, die später hinzugefügt werden",
   "Invite": "Einladen",
   "{{ userName }} was added to the collection": "{{ userName }} wurde zur Sammlung hinzugefügt",
@@ -421,7 +421,7 @@
   "Archived collections": "Archivierte Sammlungen",
   "New doc": "Neues Dokument",
   "Empty": "Leer",
-  "No collections": "No collections",
+  "No collections": "Keine Sammlungen",
   "Collapse": "Zusammenklappen",
   "Expand": "Ausklappen",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Dokument nicht unterstützt - versuche Markdown, Klartext, HTML oder Word",
@@ -431,7 +431,7 @@
   "Could not load shared documents": "Konnte geteilte Dokumente nicht laden",
   "Shared with me": "Mit mir geteilt",
   "Show more": "Mehr anzeigen",
-  "Link options": "Link options",
+  "Link options": "Linkoptionen",
   "Could not load starred documents": "Favorisiertes Dokumente konnten nicht geladen werden",
   "Starred": "Favoriten",
   "Up to date": "Auf dem neuesten Stand",
@@ -688,8 +688,8 @@
   "You may have lost access to this document, try reloading": "Sie haben möglicherweise den Zugriff auf dieses Dokument verloren, versuchen Sie es neu zu laden",
   "Too many users connected to document": "Zu viele Benutzer sind mit dem Dokument verbunden",
   "Your edits will sync once other users leave the document": "Ihre Änderungen werden synchronisiert, sobald andere Benutzer das Dokument verlassen",
-  "New version available": "New version available",
-  "Please reload the page to update to the latest version": "Please reload the page to update to the latest version",
+  "New version available": "Eine neue Version ist verfügbar",
+  "Please reload the page to update to the latest version": "Bitte lade die Seite neu, um auf die neuste Version zu aktualisieren",
   "Server connection lost": "Verbindung zum Server verloren",
   "Edits you make will sync once you’re online": "Änderungen, die du vornimmst, werden synchronisiert, sobald du online bist",
   "Offline": "Offline",
