fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -319,11 +319,11 @@
   "Permission": "권한",
   "Change Language": "언어 변경",
   "Dismiss": "닫기",
-  "Unable to download image": "Unable to download image",
+  "Unable to download image": "이미지를 다운로드할 수 없음",
   "Lightbox": "라이트박스",
   "View, navigate, or download images in the document": "문서에서 이미지 보기, 탐색 또는 다운로드",
-  "Zoom in": "Zoom in",
-  "Zoom out": "Zoom out",
+  "Zoom in": "확대",
+  "Zoom out": "축소",
   "Close": "닫기",
   "Previous": "이전",
   "Next": "다음",
@@ -372,8 +372,8 @@
   "Disable this setting to discourage search engines from indexing the page": "검색 엔진이 페이지를 인덱싱하지 못하도록 하려면 이 옵션을 비활성화 합니다",
   "Show last modified": "최종 수정일 표시",
   "Display the last modified timestamp on the shared page": "공유 페이지에 마지막으로 수정된 타임스탬프 표시",
-  "Show table of contents": "Show table of contents",
-  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
+  "Show table of contents": "목차 표시",
+  "Display the table of contents on documents by default": "기본적으로 문서의 목차 표시",
   "All documents in this collection will be shared on the web, including any new documents added later": "이 컬렉션의 모든 문서는 나중에 추가된 새 문서를 포함하여 웹에서 공유됨",
   "Invite": "초대",
   "{{ userName }} was added to the collection": "{{ userName }} 이(가) 컬렉션에 추가되었습니다",
@@ -421,7 +421,7 @@
   "Archived collections": "보관된 컬렉션",
   "New doc": "새 문서",
   "Empty": "비어 있음",
-  "No collections": "No collections",
+  "No collections": "컬렉션 없음",
   "Collapse": "감추기",
   "Expand": "펼치기",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "이 문서는 지원되지 않습니다 – Markdown, Plain Text, HTML이나 Word를 이용해주세요",
@@ -431,7 +431,7 @@
   "Could not load shared documents": "공유 문서를 불러올 수 없습니다.",
   "Shared with me": "나에게 공유함",
   "Show more": "더 보기",
-  "Link options": "Link options",
+  "Link options": "링크 옵션",
   "Could not load starred documents": "별표 표시한 문서를 불러올 수 없습니다",
   "Starred": "중요 문서",
   "Up to date": "최신 상태",
@@ -688,8 +688,8 @@
   "You may have lost access to this document, try reloading": "이 문서에 대한 액세스 권한을 잃었을 수 있습니다. 새로고침해 보세요.",
   "Too many users connected to document": "문서에 연결된 사용자가 너무 많습니다.",
   "Your edits will sync once other users leave the document": "다른 사용자가 문서를 떠나면 편집 내용이 동기화됩니다.",
-  "New version available": "New version available",
-  "Please reload the page to update to the latest version": "Please reload the page to update to the latest version",
+  "New version available": "새로운 버전 사용 가능",
+  "Please reload the page to update to the latest version": "최신 버전으로 업데이트하려면 페이지를 다시 로드하세요",
   "Server connection lost": "서버 연결 끊김",
   "Edits you make will sync once you’re online": "온라인 상태가 되면 수정 사항이 동기화됩니다",
   "Offline": "오프라인",
