fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -319,11 +319,11 @@
   "Permission": "Permission",
   "Change Language": "Changer de langue",
   "Dismiss": "Fermer",
-  "Unable to download image": "Unable to download image",
+  "Unable to download image": "Impossible de télécharger l'image",
   "Lightbox": "Visionneuse",
   "View, navigate, or download images in the document": "Afficher, naviguer ou télécharger des images dans le document",
-  "Zoom in": "Zoom in",
-  "Zoom out": "Zoom out",
+  "Zoom in": "Zoom avant",
+  "Zoom out": "Zoom arrière",
   "Close": "Fermer",
   "Previous": "Précédent",
   "Next": "Suivant",
@@ -372,8 +372,8 @@
   "Disable this setting to discourage search engines from indexing the page": "Désactivez ce paramètre pour empêcher les moteurs de recherche d'indexer la page.",
   "Show last modified": "Afficher les dernières modifications",
   "Display the last modified timestamp on the shared page": "Afficher le dernier horodatage modifié sur la page partagée",
-  "Show table of contents": "Show table of contents",
-  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
+  "Show table of contents": "Montrer la table des matières",
+  "Display the table of contents on documents by default": "Affiche par défaut la table des matières dans les documents",
   "All documents in this collection will be shared on the web, including any new documents added later": "Tous les documents de cette collection seront partagés sur le web, y compris les nouveaux documents ajoutés plus tard",
   "Invite": "Inviter",
   "{{ userName }} was added to the collection": "{{ userName }} été ajouté à la collection",
@@ -421,7 +421,7 @@
   "Archived collections": "Collections archivées",
   "New doc": "Nouveau doc",
   "Empty": "Vide",
-  "No collections": "No collections",
+  "No collections": "Aucune collection",
   "Collapse": "Réduire",
   "Expand": "Développer",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Document non pris en charge - essayez un format Markdown, Text, HTML ou Word",
@@ -431,7 +431,7 @@
   "Could not load shared documents": "Impossible de charger les documents partagés",
   "Shared with me": "Partagés avec moi",
   "Show more": "Afficher plus",
-  "Link options": "Link options",
+  "Link options": "Options du lien",
   "Could not load starred documents": "Impossible de charger les documents favoris",
   "Starred": "Favoris",
   "Up to date": "À jour",
@@ -688,8 +688,8 @@
   "You may have lost access to this document, try reloading": "Vous avez peut-être perdu l'accès à ce document, essayez de recharger",
   "Too many users connected to document": "Trop d'utilisateurs connectés au document",
   "Your edits will sync once other users leave the document": "Vos modifications seront synchronisées une fois que les autres utilisateurs quitteront le document",
-  "New version available": "New version available",
-  "Please reload the page to update to the latest version": "Please reload the page to update to the latest version",
+  "New version available": "Nouvelle version disponible",
+  "Please reload the page to update to the latest version": "Veuillez recharger la page pour mettre à jour vers la dernière version",
   "Server connection lost": "Connexion au serveur perdue",
   "Edits you make will sync once you’re online": "Les modifications que vous effectuez seront synchronisées lorsque vous serez en ligne",
   "Offline": "Hors-ligne",
