fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -778,7 +778,8 @@
   "Weird, this shouldn’t ever be empty": "Bizarre, ça ne devrait jamais être vide",
   "You haven’t created any documents yet": "Vous n'avez pas encore créé de documents",
   "Documents you’ve recently viewed will be here for easy access": "Les documents que vous avez récemment consultés seront facilement accessibles ici",
-  "We sent out your invites!": "Nous avons envoyé vos invitations !",
+  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "Un lien d'invitation a déjà été envoyé à ces adresses email",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "Désolé, vous pouvez seulement envoyer {{MAX_INVITES}} invitations à la fois",
   "Invited {{roleName}} will receive access to": "Les invités {{roleName}} recevront l'accès à",
