fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -778,7 +778,8 @@
   "Weird, this shouldn’t ever be empty": "Dziwne, to nigdy nie powinno być puste",
   "You haven’t created any documents yet": "Nie utworzyłeś jeszcze żadnych dokumentów",
   "Documents you’ve recently viewed will be here for easy access": "Tutaj będą dostępne dokumenty, które ostatnio przeglądałeś",
-  "We sent out your invites!": "Wysłaliśmy Twoje zaproszenia!",
+  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "Te adresy e-mail już zostały zaproszone",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "Przepraszamy, można wysłać tylko {{MAX_INVITES}} zaproszeń na raz",
   "Invited {{roleName}} will receive access to": "Zaproszony {{roleName}} otrzyma dostęp do",
