fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -778,7 +778,8 @@
   "Weird, this shouldn’t ever be empty": "이상하네, 여기가 비어 있으면 안 되는데",
   "You haven’t created any documents yet": "아직 문서를 만들지 않았습니다.",
   "Documents you’ve recently viewed will be here for easy access": "쉽게 액세스할 수 있도록 최근에 본 문서가 여기에 표시됩니다.",
-  "We sent out your invites!": "초대장을 보냈습니다!",
+  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "해당 이메일 주소는 이미 초대되어 있습니다.",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "죄송합니다. 한 번에 {{MAX_INVITES}} 명만 초대할 수 있습니다.",
   "Invited {{roleName}} will receive access to": "초대된 {{roleName}} 은(는) 다음 접근 권한을 가집니다",
