fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -778,7 +778,8 @@
   "Weird, this shouldn’t ever be empty": "Seltsam, das sollte nie leer sein",
   "You haven’t created any documents yet": "Du hast noch keine Dokumente erstellt",
   "Documents you’ve recently viewed will be here for easy access": "Dokumente, die du dir kürzlich angesehen hast, sind hier für einen einfachen Zugriff verfügbar",
-  "We sent out your invites!": "Wir haben Ihre Einladungen verschickt!",
+  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "Diese E-Mail-Adressen sind bereits eingeladen",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "Du kannst leider nur {{MAX_INVITES}} Einladungen gleichzeitig senden",
   "Invited {{roleName}} will receive access to": "Eingeladene {{roleName}} erhalten Zugriff auf",
